plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}

group 'com.example'
version '1.0'

sourceCompatibility = JavaVersion.VERSION_13

repositories {
    mavenLocal()
    maven { url 'https://maven.aliyun.com/repository/public' }
    mavenCentral()
}

ext {
    lombokVersion = '1.18.12'
    log4jVersion = '2.12.1'
    jacksonVersion = '2.10.1'
    jsoupVersion = '1.11.2'
    seleniumVersion = '3.141.59'
    zxingVersion = '3.3.0'
    javacvVersion = '1.4.1'
    ffmpegVersion = '4.2.1-1.5.2'
    commonsJexVersion = '3.1'
    curatorVersion = '5.0.0'
}

dependencies {
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    implementation 'org.openjdk.jol:jol-core:0.9'
    implementation 'redis.clients:jedis:3.1.0'

    // 门面 slf4j核心api 桥接包会自动依赖 可省略
    // implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
    // 桥接器 与slf4j保持桥接 会自动依赖slf4j-api log4j-core
    implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
    // 日志实现 log4j2核心包
    // implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
    // web项目需要添加
    // implementation "org.apache.logging.log4j:log4j-web:${log4jVersion}"

    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${jacksonVersion}"

    // jsoup
    implementation "org.jsoup:jsoup:${jsoupVersion}"

    // selenium
    implementation "org.seleniumhq.selenium:selenium-java:${seleniumVersion}"

    implementation "com.google.zxing:javase:${zxingVersion}"

    implementation "org.bytedeco:javacv-platform:${javacvVersion}"
    implementation "org.bytedeco:ffmpeg-platform:${ffmpegVersion}"
    implementation "org.apache.commons:commons-jexl3:${commonsJexVersion}"
    // zookeeper客户端
    implementation "org.apache.curator:curator-recipes:${curatorVersion}"
}

// https://github.com/openjfx/javafx-gradle-plugin
// 定义使用的模块 可自动下载依赖
javafx {
    modules = ['javafx.controls', 'javafx.fxml']
}